# pwv-study

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: methodology.md
notebooks/: 01_quick_demo.ipynb  02_compare_pipelines.ipynb
scripts/: make_advanced_figures.py
src/pwvstudy/: __init__.py  cli.py  clustering.py  fiducials.py  metrics.py  pipelines.py  plots.py  preprocess.py  quality.py  synthetic.py  validation.py
tests/: test_fiducials.py  test_metrics.py
