[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "pwv-study-final"
version = "1.1.0"
description = "Lag-based vascular velocity pipelines"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name="Iuliia Vitiugova"}]
dependencies = ["numpy","scipy","pandas","matplotlib","typer","scikit-learn"]
[project.scripts]
pwv-study = "pwvstudy.cli:app"
