[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pwv-study"
version = "0.1.0"
description = "Robust PWV processing pipelines (Segmental/TT/Composite) on synthetic data"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name="Iuliia Vitiugova"}]
dependencies = [
  "numpy>=1.23",
  "scipy>=1.9",
  "pandas>=1.5",
  "matplotlib>=3.7",
  "typer>=0.9",
]

[project.scripts]
pwv-study = "pwvstudy.cli:app"
